--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ more efficient AI applications. As part of my research, my interests cover the f
 <center> <img src="research/Research.jpg" width="900" height=auto> </center>
 <h2>Recent news</h2> 
 <ul>
+  <li><p>Feb. 2025: Glad to receive funding from NSF CISE-CNS in collaboration with <a href="https://sites.google.com/view/sydzhang">Prof.Songyang Zhang at ULL</a>. The proposal will be focused on spatiotemporal graph-structured data processing!  </p></li> 
   <li><p>Jan. 2025: One paper on <a href="https://openreview.net/forum?id=vRvVVb0NAz">task vectors in machine unlearning</a> was accepted to the ICLR, 2025! </p></li> 
   <li><p>Jan. 2025: One paper on <a href="https://ieeexplore.ieee.org/abstract/document/10852195">Unmanned underwater vehicle</a> was accepted to IEEE Internet of Things Journal! </p></li> 
   
