--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ more efficient AI applications. As part of my research, my interests cover the f
 <li><p>Probability and Statistical Inference</p>
 </li>
 </ul>  
-  <p> My current research interests lie in advancing the theoretical foundations of Large Language Models, including the analysis of learning paradigms, e.g., contrastive learning and in-context learning, as well as the study of emerging efficient neural network architectures such as Transformer and Mamba. I am also interested in the algorithmic foundations of parameter-efficient transfer learning and sparse learning, particularly for applications involving spatiotemporal data. </p>
+  <p> My current research interests lie in advancing the theoretical foundations of Large Language Models, including the analysis of learning paradigms, e.g., contrastive learning and in-context learning, as well as the study of emerging efficient neural network architectures such as Transformer and Mamba. I am also interested in the algorithmic foundations of parameter-efficient transfer learning and sparse learning, particularly for applications involving spatiotemporal data. Thank you, NSF! </p>
 <center> <img src="research/Research.jpg" width="900" height=auto> </center>
 <h2>Recent news</h2> 
 <ul>
