--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@ more efficient AI applications. As part of my research, my interests cover the f
 </ul>  
   <p> My current research interests lie in advancing the theoretical foundations of Large Language Models, including the analysis of learning paradigms, e.g., contrastive learning and in-context learning, as well as the study of emerging efficient neural network architectures such as Transformer and Mamba. I am also interested in the algorithmic foundations of parameter-efficient transfer learning and sparse learning, particularly for applications involving spatiotemporal data. Thank you, NSF! </p>
 <center> <img src="research/Research.jpg" width="900" height=auto> </center>
-<h2>Recent news</h2> 
+<h2>Recent news (Last updated on 9/18/2025)</h2> 
 <ul>
+  <li><p>Sep. 2025: Two papers on "Theoretical Understanding of Contrastive Learning" and "Self-training in Improving Domain Adaptation" were accepted in NeurIPS. Links will be added soon.  </p></li> 
+  <li><p>Sep. 2025: One paper “Is FISHER All You Need in The Multi-AUV Underwater Target Tracking Task?” was accepted in IEEE TMC (Transactions on Mobile Computing). It will appear soon.  </p></li> 
+  <li><p>Jun. 2025: Two papers were accepted in IROS.  </p></li> 
   <li><p>Feb. 2025: Glad to receive funding from NSF CISE-CNS in collaboration with <a href="https://sites.google.com/view/sydzhang">Prof.Songyang Zhang at ULL</a>. The proposal will be focused on spatiotemporal graph-structured data processing!  </p></li> 
   <li><p>Jan. 2025: One paper on <a href="https://openreview.net/forum?id=vRvVVb0NAz">task vectors in machine unlearning</a> was accepted to the ICLR, 2025! </p></li> 
   <li><p>Jan. 2025: One paper on <a href="https://ieeexplore.ieee.org/abstract/document/10852195">Unmanned underwater vehicle</a> was accepted to IEEE Internet of Things Journal! </p></li> 
@@ -132,3 +135,4 @@ more efficient AI applications. As part of my research, my interests cover the f
 </table>
 </body>
 </html>
+
