--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-  <div class="menu-category">Opening</div>
-<div class="menu-item"><a href="opening.html">Opening</a></div>
+  <div class="menu-category">Team</div>
+<div class="menu-item"><a href="Students.html">Students</a></div>
+<div class="menu-item"><a href="opening.html">opening</a></div>
   <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Others</div>
@@ -135,4 +136,5 @@ more efficient AI applications. As part of my research, my interests cover the f
 </table>
 </body>
 </html>
+
 
