--- a/Students.html
+++ b/Students.html
@@ -42,8 +42,9 @@
 </ul>
 
 <h2>Undergraduate Students:</h2>
-<p>Hilario, Marcus Victor (Spring 2025–).</p>
-
+  <ul>
+<li><p>Hilario, Marcus Victor (Spring 2025–).</p><li>
+<ul>
 </td>
 </tr>
 </table>
