--- a/Students.html
+++ b/Students.html
@@ -19,7 +19,7 @@
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Team</div>
 <div class="menu-item"><a href="Students.html" class="current">Students</a></div>
-<div class="menu-item"><a href="opening.html">Opening</a></div>
+<div class="menu-item"><a href="Opening.html">Opening</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Others</div>
