--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
 <div class="menu-item"><a href="publications.html">Publications</a></div>
   <div class="menu-category">Team</div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
-<div class="menu-item"><a href="opening.html">opening</a></div>
+<div class="menu-item"><a href="Opening.html">opening</a></div>
   <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Others</div>
