--- a/Students.html
+++ b/Students.html
@@ -42,9 +42,10 @@
 </ul>
 
 <h2>Undergraduate Students:</h2>
-  <ul>
-<li><p>Hilario, Marcus Victor (Spring 2025–).</p><li>
 <ul>
+  <li><p>Hilario, Marcus Victor (Spring 2025–).</p></li>
+  </ul>
+  
 </td>
 </tr>
 </table>
