--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="menu-item"><a href="publications.html">Publications</a></div>
   <div class="menu-category">Team</div>
 <div class="menu-item"><a href="Students.html">Students</a></div>
-<div class="menu-item"><a href="Opening.html">Opening</a></div>
+<div class="menu-item"><a href="opening.html">Opening</a></div>
   <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Others</div>
@@ -136,6 +136,7 @@ more efficient AI applications. As part of my research, my interests cover the f
 </table>
 </body>
 </html>
+
 
 
 
