--- a/Teaching.html
+++ b/Teaching.html
@@ -19,8 +19,8 @@
 <div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Team</div>
-<div class="menu-item"><a href="Students.html" class="current">Students</a></div>
-<div class="menu-item"><a href="Opening.html">Opening</a></div>
+<div class="menu-item"><a href="Students.html">Students</a></div>
+<div class="menu-item"><a href="opening.html">Opening</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html" class="current">Teaching</a></div>
 <div class="menu-category">Others</div>
