--- a/Students.html
+++ b/Students.html
@@ -39,11 +39,19 @@
 <h2>Graduate Students:</h2>
 <ul>
   <li><p>Anson Thomas (Spring 2023–Fall 2024). Next Stop: NYC Mayor’s Office of Contracting Services.</p></li>
+  <li><p>Preetham Notla (Spring 2023–Fall 2024). </p></li> 
 </ul>
 
 <h2>Undergraduate Students:</h2>
 <ul>
   <li><p>Hilario, Marcus Victor (Spring 2025–).</p></li>
+  </ul>
+
+<h2>Visting Students:</h2>
+<ul>
+  <li><p>Jinghuaze Xu (Remote) (Fall 2023–Fall 2024).</p></li>
+  </ul>
+  <li><p> Weihang Zhang (Remote) (Fall 2023–Fall 2024).</p></li>
   </ul>
   
 </td>
