--- a/Students.html
+++ b/Students.html
@@ -50,7 +50,7 @@
 <h2>Visting Students:</h2>
 <ul>
   <li><p>Jinghuaze Xu (Remote) (Fall 2023–Fall 2024).</p></li>
-  <li><p> Weihang Zhang (Remote) (Fall 2023–Fall 2024).</p></li>
+  <li><p> Weihang Zhang (Remote) (Fall 2025).</p></li>
 </ul>
   
 </td>
