--- a/Students.html
+++ b/Students.html
@@ -38,6 +38,7 @@
 
 <h2>Graduate Students:</h2>
 <ul>
+  <li><p>Midde, Gnana Abhishek (Spring 2026-).</p></li>
   <li><p>Anson Thomas (Spring 2023–Fall 2024). Next Stop: NYC Mayor’s Office of Contracting Services.</p></li>
   <li><p>Preetham Notla (Spring 2023–Fall 2024). </p></li> 
 </ul>
